fix: separate section descriptions from form field labels in Settings
- Add descriptionLabel keys to all 8 settings sections (leavePolicies, holidays, jobTitles, benefitsPackages, workSchedules, overtimePolicies, attendancePolicies, remoteWorkPolicies)
- Update form field labels to use descriptionLabel instead of description
- Fixes issue where form fields showed section description text instead of 'Description' label
- Update English, Spanish, and French translation files
- Section descriptions now display correctly in modal headers

--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -776,7 +776,7 @@
       "name": "Name",
       "namePlaceholder": "e.g., Vacation, Sick Leave",
       "nameRequired": "Leave type name is required",
-      "description": "Description",
+      "descriptionLabel": "Description",
       "descriptionPlaceholder": "Optional description",
       "annualEntitlement": "Default Annual Entitlement (days)",
       "isPaid": "Is Paid",
@@ -805,7 +805,7 @@
       "deleting": "Deleting...",
       "list": "Holidays",
       "date": "Date",
-      "description": "Description",
+      "descriptionLabel": "Description",
       "descriptionPlaceholder": "e.g., New Year's Day, Christmas",
       "companyClosure": "Company Closure",
       "dateAndDescriptionRequired": "Date and description are required",
@@ -838,7 +838,7 @@
       "list": "Job Titles",
       "name": "Job Title Name",
       "nameRequired": "Job title name is required",
-      "description": "Description",
+      "descriptionLabel": "Description",
       "department": "Department",
       "selectDepartment": "Select Department",
       "levelGrade": "Level/Grade",
@@ -868,7 +868,7 @@
       "list": "Benefits Packages",
       "name": "Package Name",
       "nameRequired": "Package name is required",
-      "description": "Description",
+      "descriptionLabel": "Description",
       "benefitTypes": "Benefit Types",
       "coverageLevel": "Coverage Level",
       "basic": "Basic",
@@ -898,7 +898,7 @@
       "list": "Work Schedules",
       "name": "Schedule Name",
       "nameRequired": "Schedule name is required",
-      "description": "Description",
+      "descriptionLabel": "Description",
       "startTime": "Start Time",
       "endTime": "End Time",
       "daysOfWeek": "Days of Week",
@@ -929,7 +929,7 @@
       "list": "Overtime Policies",
       "name": "Policy Name",
       "nameRequired": "Policy name is required",
-      "description": "Description",
+      "descriptionLabel": "Description",
       "weeklyThreshold": "Weekly Threshold (hours)",
       "dailyThreshold": "Daily Threshold (hours)",
       "multiplier": "Overtime Multiplier",
@@ -961,7 +961,7 @@
       "list": "Attendance Policies",
       "name": "Policy Name",
       "nameRequired": "Policy name is required",
-      "description": "Description",
+      "descriptionLabel": "Description",
       "lateGracePeriod": "Late Arrival Grace Period (minutes)",
       "absenceLimitPerMonth": "Absence Limit Per Month",
       "tardinessPenalty": "Tardiness Penalty (points)",
@@ -994,7 +994,7 @@
       "list": "Remote Work Policies",
       "name": "Policy Name",
       "nameRequired": "Policy name is required",
-      "description": "Description",
+      "descriptionLabel": "Description",
       "eligibilityCriteria": "Eligibility Criteria",
       "all": "All Employees",
       "department": "Department",
