--- a/web/src/i18n/locales/es.json
+++ b/web/src/i18n/locales/es.json
@@ -700,7 +700,7 @@
       "name": "Nombre",
       "namePlaceholder": "ej., Vacaciones, Licencia por Enfermedad",
       "nameRequired": "El nombre del tipo de licencia es requerido",
-      "description": "Descripción",
+      "descriptionLabel": "Descripción",
       "descriptionPlaceholder": "Descripción opcional",
       "annualEntitlement": "Derecho Anual por Defecto (días)",
       "isPaid": "Es Pagado",
@@ -729,7 +729,7 @@
       "deleting": "Eliminando...",
       "list": "Días Festivos",
       "date": "Fecha",
-      "description": "Descripción",
+      "descriptionLabel": "Descripción",
       "descriptionPlaceholder": "ej., Año Nuevo, Navidad",
       "companyClosure": "Cierre de la Empresa",
       "dateAndDescriptionRequired": "La fecha y descripción son requeridas",
@@ -762,7 +762,7 @@
       "list": "Títulos de Trabajo",
       "name": "Nombre del Título de Trabajo",
       "nameRequired": "El nombre del título de trabajo es requerido",
-      "description": "Descripción",
+      "descriptionLabel": "Descripción",
       "department": "Departamento",
       "selectDepartment": "Seleccionar Departamento",
       "levelGrade": "Nivel/Grado",
@@ -792,7 +792,7 @@
       "list": "Paquetes de Beneficios",
       "name": "Nombre del Paquete",
       "nameRequired": "El nombre del paquete es requerido",
-      "description": "Descripción",
+      "descriptionLabel": "Descripción",
       "benefitTypes": "Tipos de Beneficios",
       "coverageLevel": "Nivel de Cobertura",
       "basic": "Básico",
@@ -822,7 +822,7 @@
       "list": "Horarios de Trabajo",
       "name": "Nombre del Horario",
       "nameRequired": "El nombre del horario es requerido",
-      "description": "Descripción",
+      "descriptionLabel": "Descripción",
       "startTime": "Hora de Inicio",
       "endTime": "Hora de Fin",
       "daysOfWeek": "Días de la Semana",
@@ -853,7 +853,7 @@
       "list": "Políticas de Horas Extras",
       "name": "Nombre de la Política",
       "nameRequired": "El nombre de la política es requerido",
-      "description": "Descripción",
+      "descriptionLabel": "Descripción",
       "weeklyThreshold": "Umbral Semanal (horas)",
       "dailyThreshold": "Umbral Diario (horas)",
       "multiplier": "Multiplicador de Horas Extras",
@@ -885,7 +885,7 @@
       "list": "Políticas de Asistencia",
       "name": "Nombre de la Política",
       "nameRequired": "El nombre de la política es requerido",
-      "description": "Descripción",
+      "descriptionLabel": "Descripción",
       "lateGracePeriod": "Período de Gracia por Llegada Tardía (minutos)",
       "absenceLimitPerMonth": "Límite de Ausencias por Mes",
       "tardinessPenalty": "Penalización por Tardanza (puntos)",
@@ -918,7 +918,7 @@
       "list": "Políticas de Trabajo Remoto",
       "name": "Nombre de la Política",
       "nameRequired": "El nombre de la política es requerido",
-      "description": "Descripción",
+      "descriptionLabel": "Descripción",
       "eligibilityCriteria": "Criterios de Elegibilidad",
       "all": "Todos los Empleados",
       "department": "Departamento",
