--- a/web/src/i18n/locales/fr.json
+++ b/web/src/i18n/locales/fr.json
@@ -700,7 +700,7 @@
       "name": "Nom",
       "namePlaceholder": "ex., Vacances, Congé Maladie",
       "nameRequired": "Le nom du type de congé est requis",
-      "description": "Description",
+      "descriptionLabel": "Description",
       "descriptionPlaceholder": "Description optionnelle",
       "annualEntitlement": "Droit Annuel par Défaut (jours)",
       "isPaid": "Est Payé",
@@ -729,7 +729,7 @@
       "deleting": "Suppression en cours...",
       "list": "Jours Fériés",
       "date": "Date",
-      "description": "Description",
+      "descriptionLabel": "Description",
       "descriptionPlaceholder": "ex., Jour de l'An, Noël",
       "companyClosure": "Fermeture de l'Entreprise",
       "dateAndDescriptionRequired": "La date et la description sont requises",
@@ -762,7 +762,7 @@
       "list": "Titres de Poste",
       "name": "Nom du Titre de Poste",
       "nameRequired": "Le nom du titre de poste est requis",
-      "description": "Description",
+      "descriptionLabel": "Description",
       "department": "Département",
       "selectDepartment": "Sélectionner un Département",
       "levelGrade": "Niveau/Grade",
@@ -792,7 +792,7 @@
       "list": "Forfaits d'Avantages",
       "name": "Nom du Forfait",
       "nameRequired": "Le nom du forfait est requis",
-      "description": "Description",
+      "descriptionLabel": "Description",
       "benefitTypes": "Types d'Avantages",
       "coverageLevel": "Niveau de Couverture",
       "basic": "De Base",
@@ -822,7 +822,7 @@
       "list": "Horaires de Travail",
       "name": "Nom de l'Horaire",
       "nameRequired": "Le nom de l'horaire est requis",
-      "description": "Description",
+      "descriptionLabel": "Description",
       "startTime": "Heure de Début",
       "endTime": "Heure de Fin",
       "daysOfWeek": "Jours de la Semaine",
@@ -853,7 +853,7 @@
       "list": "Politiques d'Heures Supplémentaires",
       "name": "Nom de la Politique",
       "nameRequired": "Le nom de la politique est requis",
-      "description": "Description",
+      "descriptionLabel": "Description",
       "weeklyThreshold": "Seuil Hebdomadaire (heures)",
       "dailyThreshold": "Seuil Quotidien (heures)",
       "multiplier": "Multiplicateur d'Heures Supplémentaires",
@@ -885,7 +885,7 @@
       "list": "Politiques de Présence",
       "name": "Nom de la Politique",
       "nameRequired": "Le nom de la politique est requis",
-      "description": "Description",
+      "descriptionLabel": "Description",
       "lateGracePeriod": "Période de Grâce pour Retard (minutes)",
       "absenceLimitPerMonth": "Limite d'Absences par Mois",
       "tardinessPenalty": "Pénalité de Retard (points)",
@@ -918,7 +918,7 @@
       "list": "Politiques de Télétravail",
       "name": "Nom de la Politique",
       "nameRequired": "Le nom de la politique est requis",
-      "description": "Description",
+      "descriptionLabel": "Description",
       "eligibilityCriteria": "Critères d'Éligibilité",
       "all": "Tous les Employés",
       "department": "Département",
