fix: Chat participant selector improvements
- Filter to only show active employees (users with employee_id linked to Active employees)
- Replace dropdown with autocomplete search
- Display employee names (first_name + last_name) instead of usernames
- Fix translation key for Messages navigation item

--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -8,6 +8,7 @@
     "compliance": "Compliance",
     "benefits": "Benefits",
     "bonuses": "Bonuses & Commissions",
+    "messages": "Messages",
     "settings": "Settings",
     "logout": "Logout",
     "testing": "Testing",
