feat: Add location management system with CRUD operations
- Fix duplicate locations bug by adding UNIQUE constraint on locations.name
- Add database migration to clean up existing duplicates
- Add POST, PUT, DELETE endpoints for location management with RBAC
- Add location management UI in Settings page (mirrors departments pattern)
- Support create, edit (name/region/active status), and delete operations
- Prevent deletion if employees are assigned to location
- Add translations for location management (en, es, fr)
- Update GET /locations endpoint to support ?all=true for management UI

--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -762,6 +762,32 @@
       "employeesAssigned": "This department has employees assigned",
       "cannotDelete": "Cannot delete department with assigned employees"
     },
+    "locations": {
+      "title": "Location Management",
+      "description": "Manage office locations. Create, edit, or deactivate locations used throughout the system.",
+      "addNew": "Add New Location",
+      "add": "Add",
+      "adding": "Adding...",
+      "edit": "Edit",
+      "save": "Save",
+      "cancel": "Cancel",
+      "delete": "Delete",
+      "deleting": "Deleting...",
+      "list": "Locations",
+      "namePlaceholder": "Enter location name",
+      "regionPlaceholder": "Enter region (optional)",
+      "nameRequired": "Location name is required",
+      "addError": "Failed to add location",
+      "updateError": "Failed to update location",
+      "deleteError": "Failed to delete location",
+      "confirmDelete": "Are you sure you want to delete this location?",
+      "noLocations": "No locations found",
+      "noEmployees": "No employees assigned",
+      "employeeCount": "{{count}} employee(s) assigned",
+      "cannotDelete": "Cannot delete location: {{count}} employee(s) assigned. Please reassign employees first.",
+      "active": "Active",
+      "inactive": "Inactive"
+    },
     "leavePolicies": {
       "title": "Leave Policies",
       "description": "Manage leave types and their policies. Changes affect all users.",
