--- a/web/src/i18n/locales/es.json
+++ b/web/src/i18n/locales/es.json
@@ -685,6 +685,32 @@
       "employeesAssigned": "Este departamento tiene empleados asignados",
       "cannotDelete": "No se puede eliminar departamento con empleados asignados"
     },
+    "locations": {
+      "title": "Gestión de Ubicaciones",
+      "description": "Gestionar ubicaciones de oficina. Crear, editar o desactivar ubicaciones utilizadas en todo el sistema.",
+      "addNew": "Agregar Nueva Ubicación",
+      "add": "Agregar",
+      "adding": "Agregando...",
+      "edit": "Editar",
+      "save": "Guardar",
+      "cancel": "Cancelar",
+      "delete": "Eliminar",
+      "deleting": "Eliminando...",
+      "list": "Ubicaciones",
+      "namePlaceholder": "Ingrese el nombre de la ubicación",
+      "regionPlaceholder": "Ingrese la región (opcional)",
+      "nameRequired": "El nombre de la ubicación es requerido",
+      "addError": "Error al agregar ubicación",
+      "updateError": "Error al actualizar ubicación",
+      "deleteError": "Error al eliminar ubicación",
+      "confirmDelete": "¿Está seguro de que desea eliminar esta ubicación?",
+      "noLocations": "No se encontraron ubicaciones",
+      "noEmployees": "No hay empleados asignados",
+      "employeeCount": "{{count}} empleado(s) asignado(s)",
+      "cannotDelete": "No se puede eliminar ubicación: {{count}} empleado(s) asignado(s). Por favor, reasigne los empleados primero.",
+      "active": "Activa",
+      "inactive": "Inactiva"
+    },
     "leavePolicies": {
       "title": "Políticas de Licencias",
       "description": "Gestionar tipos de licencias y sus políticas. Los cambios afectan a todos los usuarios.",
