--- a/web/src/i18n/locales/fr.json
+++ b/web/src/i18n/locales/fr.json
@@ -685,6 +685,32 @@
       "employeesAssigned": "Ce département a des employés assignés",
       "cannotDelete": "Impossible de supprimer le département avec des employés assignés"
     },
+    "locations": {
+      "title": "Gestion des Emplacements",
+      "description": "Gérer les emplacements de bureau. Créer, modifier ou désactiver les emplacements utilisés dans tout le système.",
+      "addNew": "Ajouter un Nouvel Emplacement",
+      "add": "Ajouter",
+      "adding": "Ajout en cours...",
+      "edit": "Modifier",
+      "save": "Enregistrer",
+      "cancel": "Annuler",
+      "delete": "Supprimer",
+      "deleting": "Suppression en cours...",
+      "list": "Emplacements",
+      "namePlaceholder": "Entrez le nom de l'emplacement",
+      "regionPlaceholder": "Entrez la région (optionnel)",
+      "nameRequired": "Le nom de l'emplacement est requis",
+      "addError": "Échec de l'ajout de l'emplacement",
+      "updateError": "Échec de la mise à jour de l'emplacement",
+      "deleteError": "Échec de la suppression de l'emplacement",
+      "confirmDelete": "Êtes-vous sûr de vouloir supprimer cet emplacement?",
+      "noLocations": "Aucun emplacement trouvé",
+      "noEmployees": "Aucun employé assigné",
+      "employeeCount": "{{count}} employé(s) assigné(s)",
+      "cannotDelete": "Impossible de supprimer l'emplacement: {{count}} employé(s) assigné(s). Veuillez réassigner les employés d'abord.",
+      "active": "Actif",
+      "inactive": "Inactif"
+    },
     "leavePolicies": {
       "title": "Politiques de Congés",
       "description": "Gérer les types de congés et leurs politiques. Les modifications affectent tous les utilisateurs.",
