feat: enable user role to view their own leave balances
- Add 'My Balances' tab for regular users in Leave Management
- Remove user role restriction from balances tab rendering
- Hide HR Management Actions section for users (read-only view)
- Add translation keys for 'My Balances' in en, es, fr
- Users can now view used days, available days, and breakdown by leave type
- API already enforces RBAC - users only see their own data
- All management features remain hidden from users

Also includes:
- Add database cleanup script for removing all leave records
- Add Node.js script to execute cleanup (clean-leaves.js)

--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -138,6 +138,7 @@
     },
     "submitRequest": "Submit Request",
     "myRequests": "My Requests",
+    "myBalances": "My Balances",
     "leaveCalendar": "Leave Calendar",
     "leaveRequests": "Leave Requests",
     "leaveBalances": "Leave Balances",
