--- a/web/src/i18n/locales/es.json
+++ b/web/src/i18n/locales/es.json
@@ -137,6 +137,7 @@
     },
     "submitRequest": "Enviar Solicitud",
     "myRequests": "Mis Solicitudes",
+    "myBalances": "Mis Saldos",
     "leaveCalendar": "Calendario de Ausencias",
     "leaveRequests": "Solicitudes de Ausencia",
     "leaveBalances": "Saldos de Ausencias",
