--- a/web/src/i18n/locales/fr.json
+++ b/web/src/i18n/locales/fr.json
@@ -137,6 +137,7 @@
     },
     "submitRequest": "Soumettre la Demande",
     "myRequests": "Mes Demandes",
+    "myBalances": "Mes Soldes",
     "leaveCalendar": "Calendrier des Congés",
     "leaveRequests": "Demandes de Congé",
     "leaveBalances": "Soldes de Congés",
